welcome.lessons.welcome.loopdowhile.Poucet1.scala.code

var nb_biscuit : Int = 0;

while (!sortieTrouvee)
{
  for ( i <-0 to 4)
  {anvance ();
    if (estSurBiscuit)
    nb_biscuit = nb_biscuit + 1
  }
if (nb_biscuit == 3)
  {gauche();}
  else if (nb_biscuit == 5)
  	{droite();}
}

